[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/SavePanel.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/Cog.svg" type="Texture" id=2]
[ext_resource path="res://assets/ui/Reset.svg" type="Texture" id=3]
[ext_resource path="res://assets/ui/Load.svg" type="Texture" id=4]
[ext_resource path="res://assets/ui/Save.svg" type="Texture" id=5]

[node name="SavePanel" type="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -54.0
margin_right = 150.0
margin_bottom = -10.0
script = ExtResource( 1 )

[node name="SaveLoadUI" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Save" type="Button" parent="SaveLoadUI"]
margin_right = 72.0
margin_bottom = 44.0
rect_min_size = Vector2( 60, 30 )
size_flags_horizontal = 3
icon = ExtResource( 5 )
flat = true
icon_align = 1

[node name="Load" type="Button" parent="SaveLoadUI"]
margin_left = 76.0
margin_right = 148.0
margin_bottom = 44.0
rect_min_size = Vector2( 60, 30 )
size_flags_horizontal = 3
icon = ExtResource( 4 )
flat = true
icon_align = 1

[node name="Reset" type="Button" parent="SaveLoadUI"]
margin_left = 152.0
margin_right = 224.0
margin_bottom = 44.0
rect_min_size = Vector2( 60, 30 )
size_flags_horizontal = 3
icon = ExtResource( 3 )
flat = true
icon_align = 1

[node name="Options" type="Button" parent="SaveLoadUI"]
margin_left = 228.0
margin_right = 300.0
margin_bottom = 44.0
rect_min_size = Vector2( 60, 30 )
size_flags_horizontal = 3
toggle_mode = true
icon = ExtResource( 2 )
flat = true
icon_align = 1

[connection signal="pressed" from="SaveLoadUI/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="SaveLoadUI/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="SaveLoadUI/Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="SaveLoadUI/Options" to="." method="_on_Options_pressed"]
